Add clarification to the copy in the examples

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
     <div class="example">
       <div class="carousel-2 carousel-theme">
-        <div>Infinite carousel keeps going...</div>
+        <div><strong>Infinite</strong><br /><br />It keeps going...</div>
         <div>...and going</div>
       </div>
 
@@ -279,9 +279,9 @@
 
     <div class="example">
       <div class="carousel-3 carousel-theme">
-        <div>Click previous to fast forward to the end.<br />Plus, no dots!</div>
-        <div>This is the middle.</div>
-        <div>Click next to rewind to the beginning.<br />Yeah, dot-less.</div>
+        <div><strong>Rewind</strong><br /><br />Click `next` all the way to the end.</div>
+        <div>Did you notice that<br />there are no dot indicators?</div>
+        <div>Click `next` to see it rewind!</div>
       </div>
 
       <script>
