Format the copy in the HTML

--- a/index.html
+++ b/index.html
@@ -265,7 +265,10 @@
 
     <div class="example">
       <div class="carousel-2 carousel-theme">
-        <div><strong>Infinite</strong><br /><br />It keeps going...</div>
+        <div>
+          <strong>Infinite</strong><br /><br />
+          It keeps going...
+        </div>
         <div>...and going</div>
       </div>
 
@@ -279,7 +282,10 @@
 
     <div class="example">
       <div class="carousel-3 carousel-theme">
-        <div><strong>Rewind</strong><br /><br />Click `next` all the way to the end.</div>
+        <div>
+          <strong>Rewind</strong><br /><br />
+          Click `next` all the way to the end.
+        </div>
         <div>Did you notice that<br />there are no dot indicators?</div>
         <div>Click `next` to see it rewind!</div>
       </div>
